# SecurityArc

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  release.yml  test.yml
docs/: CLI_REFERENCE.md  INSTALLATION.md  README.md  USER_GUIDE.md  api-reference.md  format-spec.md  security-model.md  testing-guide.md
installer/windows/: securearc.nsi
securearc-cli/: Cargo.toml
securearc-cli/src/: main.rs
securearc-cli/src/commands/: mod.rs
securearc-core/: Cargo.toml
securearc-core/src/: lib.rs
securearc-core/src/archive/: error.rs  mod.rs  reader.rs  writer.rs
securearc-core/src/compression/: algorithms.rs  mod.rs
securearc-core/src/crypto/: encryption.rs  integrity.rs  kdf.rs  mod.rs
securearc-core/src/format/: directory.rs  header.rs  keyslot.rs  mod.rs
securearc-core/src/self_destruct/: counter.rs  destruction.rs  mod.rs
securearc-core/tests/: crypto_tests.rs  format_tests.rs  integration_tests.rs
securearc-gui/: Cargo.toml  index.html  package-lock.json  package.json  tauri.conf.json  vite.config.ts
securearc-gui/icons/: fix_icons.ps1  generate_ico.cjs
securearc-gui/src/: App.css  App.tsx  main.rs
securearc-gui/src/components/: ArchiveViewer.tsx  CreateArchive.tsx  ExtractArchive.tsx  Navigation.tsx
