[workspace]
members = [
    "securearc-core",
    "securearc-cli",
    "securearc-gui",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["SecureArc Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/securearc/securearc"
keywords = ["archive", "encryption", "compression", "security"]
categories = ["compression", "cryptography", "security"]

[workspace.dependencies]
# Core cryptographic libraries
ring = "0.17"
chacha20poly1305 = "0.10"
argon2 = "0.5"
pbkdf2 = "0.12"
sha2 = "0.10"
hmac = "0.12"
rand = "0.8"

# Compression libraries
lzma-rs = "0.3"
zstd = "0.13"
brotli = "3.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"

# Error handling
thiserror = "1.0"

# CLI dependencies
clap = { version = "4.5", features = ["derive"] }
rpassword = "7.3"
indicatif = "0.17"

# Tauri dependencies
tauri = { version = "1.6", features = ["shell-open", "fs-create-dir", "fs-read-dir", "fs-read-file", "fs-write-file", "fs-remove-file", "fs-remove-dir", "dialog-all", "custom-protocol"] }

