[package]
name = "securearc-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Core library for SecureArc self-destructing encrypted archive format"

[dependencies]
# Cryptographic libraries
ring = { workspace = true }
chacha20poly1305 = { workspace = true }
argon2 = { workspace = true }
pbkdf2 = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
rand = { workspace = true }

# Compression libraries
lzma-rs = { workspace = true }
zstd = { workspace = true }
brotli = { workspace = true }

# Serialization
serde = { workspace = true }
serde_bytes = { workspace = true }
bincode = "1.3"

# Error handling
thiserror = { workspace = true }

[dev-dependencies]
hex = "0.4"
tempfile = "3.10"

