[package]
name = "securearc-gui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Desktop GUI application for SecureArc archives"

[dependencies]
securearc-core = { path = "../securearc-core" }
tauri = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
walkdir = "2.4"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

